fixed homepage search, index page query-fill, index page text-display, index page card and search form alignment

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,16 +1,18 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding: 100px 0;
+  height: 350px;
 }
 
 .banner h1 {
-  margin: 0;
+  margin: 50;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 40px;
   font-weight: bold;
   text-align: center;
+  vertical-align: center;
 }
 
 .banner p {
@@ -19,4 +21,10 @@
   color: rgba(22, 127, 251, 0.82);
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.banner-container {
+  // display: flex ;
+  // flex-direction: column;
+
 }
